changed background, fixed responsivness on mobile

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -3,18 +3,10 @@
 @import 'landing';
 
 html, body {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
 }
 body {
-    background-image: url("../images/background.jpg");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: 100%;
-    height: 100%;
-    width: 100%;
-    min-height: 100vh;
-    min-width: 100vw;
+    background-image: url("../images/fancy-cushion.png");
 }
 
 .hero {
@@ -50,11 +42,12 @@ body {
     }
 }
 .section {
+    border-radius: 50%;
     @include breakpoint(xs){
-        // padding: 0rem;
+        padding: 0.6rem;
     }
     @include breakpoint(sm){
-        padding: 0.3rem;
+        padding: 0.8rem;
     }
 }
 #footer {
